fix: add a width to first column to cut down on excessive spacing

--- a/src/app/+run-tale/run-tale/modals/select-data-dialog/select-data-dialog.component.scss
+++ b/src/app/+run-tale/run-tale/modals/select-data-dialog/select-data-dialog.component.scss
@@ -24,3 +24,7 @@
 .clickable {
   cursor: pointer !important;
 }
+
+.icon-column {
+  width: 2em;
+}
